brat/test/golden/error/bad_rpat.brat
test :: Bool
test = cons(1, [])
