brat/test/golden/error/bad_rpat.brat.golden
Error in test/golden/error/bad_rpat.brat on line 2:
test = cons(1, [])
       ^^^^^^^^^^^

  "cons" is not a valid constructor for type Bool

